@@ -1,6 +1,6 @@
 [multiplayer]
    id=multiplayer_test
-   name= _ "2p - Across The River"
+   name= _ "2p - Across the River"
    description= _ "This map is a convenient way to do some testing with two factions, as it is pretty well balanced towards both sides.
 You can use it AI vs AI to see how well a faction fares against another."
    map_data="ffffffffffffffgggggggggggggggggggggggg
